HTML/CSS Study DAY2

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <img src="lion.png" class="profile">
         <h3 class="title">Selen</h3>
         <p class="sub-title">Front-end Developer</p>
-        <p class="desc">I am junior front-end developer</p>
+        <div class="box">
+            <p>I am junior front-end developer</p>
+        </div>
     </body>
 </html>
