minor mod for day3 homework

--- a/layout2.html
+++ b/layout2.html
@@ -16,8 +16,9 @@
             <button class="main-btn">Go to Shop</button>
         </div>
         <div class="info-background">
-            <h4 class="info-title">How we design our shoes</h4>
-            <p class="info-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt inventore distinctio ex quae quia quibusdam natus deleniti autem cumque optio ad iure saepe mollitia, quasi voluptatum aperiam ab. Quae, quidem?</p>
+            <h4>How we design our shoes</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt inventore distinctio ex quae quia quibusdam natus deleniti autem cumque optio ad iure saepe mollitia, quasi voluptatum aperiam ab. Quae, quidem?</p>
         </div>
+        <br><br><br><br><br><br><br><br><br><br><br>
     </body>
 </html>
