--- a/layout2.html
+++ b/layout2.html
@@ -19,6 +19,35 @@
             <h4>How we design our shoes</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt inventore distinctio ex quae quia quibusdam natus deleniti autem cumque optio ad iure saepe mollitia, quasi voluptatum aperiam ab. Quae, quidem?</p>
         </div>
-        <br><br><br><br><br><br><br><br><br><br><br>
+        
+        <div class="form-background">
+            <div class="form-white">
+                <form>
+                    <div class="w-100">
+                        <h3>Contact Us</h3>
+                        <p>Your Email</p>
+                        <input class="form-input" type="email" placeholder="email@domain.com">
+                    </div>
+                    <div class="w-50">
+                        <p>First name</p>
+                        <input class="form-input" type="text">
+                    </div>
+                    <div class="w-50">
+                        <p>Last name</p>
+                        <input class="form-input" type="text">
+                    </div>
+                    <div style="clear: both"></div>
+                    <div class="w-100">
+                        <p>Message</p>
+                        <textarea class="form-input" rows="10"></textarea>
+                    </div>
+                    <div class="w-100">
+                        <input id="Sub" type="checkbox">
+                        <label for="Sub">Subscribe</label>
+                        <button class="send-btn">SEND</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
