cart table exam

--- a/cart.html
+++ b/cart.html
@@ -6,23 +6,50 @@
         <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
-        <div>
-            <table>
-                <thead>
-                    <tr>
-                        <th>1</th>
-                        <td>2</td>
-                        <td>3</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th>1</th>
-                        <td>2</td>
-                        <td>3</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="cart-background">
+            <div class="cart-section">
+                <h3>Your shopping cart</h3>
+                <table class="cart-table">
+                    <thead>
+                        <tr>
+                            <th colspan="2">ITEM</th>
+                            <th>AMOUNT</th>
+                            <th>PRICE</th>
+                            <th>TOTAL</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><img src="img/cam1.png" width="100%"></td>
+                            <td>
+                                <img src="img/logo.jpg" width="50px">
+                                <p>FE 70-200 mm F2.8 GM OSS</p>
+                            </td>
+                            <td>1</td>
+                            <td>&euro; 1979.00</td>
+                            <td>&euro; 1979.00</td>
+                        </tr>
+                        <tr>
+                            <td><img src="img/cam1.png" width="100%"></td>
+                            <td>
+                                <img src="img/logo.jpg" width="50px">
+                                <p>FE 70-200 mm F2.8 GM OSS</p>
+                            </td>
+                            <td>1</td>
+                            <td>&euro; 1979.00</td>
+                            <td>&euro; 1979.00</td>
+                        </tr>
+                        <tr>
+                            <td colspan="5">&euro; 2968.00</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div>
+                    <a class="w-50" href="#">Edit your shopping cart</a>
+                    <button class="w-50">Choose payment method</button>
+                </div>
+                <div style="clear: both"></div>
+            </div>
         </div>
     </body>
 </html>
