flexbox navbar exam

--- a/layout2.html
+++ b/layout2.html
@@ -6,6 +6,12 @@
         <link href="css/main.css" rel="stylesheet">
     </head>
     <body style="margin: 0px;">
+        <div class="topnav">
+            <div class="topnav-item"><img src="img/shop_logo.png" width="80px"></div>
+            <div class="topnav-item" style="flex-grow: 1;"></div>
+            <div class="topnav-item">Products</div>
+            <div class="topnav-item">Services</div>
+        </div>
         <div class="main-background">
             <h4 class="main-title">Buy Our Shoes!</h4>
             <p class="main-content">
