HTML/CSS Study DAY7

--- a/layout2.html
+++ b/layout2.html
@@ -1,59 +1,64 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Document</title>
-        <link href="css/main.css" rel="stylesheet">
-    </head>
-    <body style="margin: 0px;">
-        <div class="topnav">
-            <div class="topnav-item"><img src="img/shop_logo.png" width="80px"></div>
-            <div class="topnav-item" style="flex-grow: 1;"></div>
-            <div class="topnav-item">Products</div>
-            <div class="topnav-item">Services</div>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link href="css/main.css" rel="stylesheet">
+</head>
+
+<body style="margin: 0px;">
+    <div class="topnav">
+        <div class="topnav-item"><img src="img/shop_logo.png" width="80px"></div>
+        <div class="topnav-item" style="flex-grow: 1;"></div>
+        <div class="topnav-item">Products</div>
+        <div class="topnav-item">Services</div>
+    </div>
+
+    <div class="main-background">
+        <h4 class="main-title">Buy Our Shoes!</h4>
+        <p class="main-content">
+            Trick or Treat! <br>
+            Special price for Halloween week!(~90% discount)<br>
+            If you want to see our products, please click the button
+        </p>
+        <button class="main-btn">Go to Shop</button>
+    </div>
+    <div class="info-background">
+        <h4>How we design our shoes</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt inventore distinctio ex quae quia quibusdam
+            natus deleniti autem cumque optio ad iure saepe mollitia, quasi voluptatum aperiam ab. Quae, quidem?</p>
+    </div>
+
+    <div class="form-background">
+        <div class="form-white">
+            <form>
+                <div class="w-100">
+                    <h3>Contact Us</h3>
+                    <p>Your Email</p>
+                    <input class="form-input" type="email" placeholder="email@domain.com">
+                </div>
+                <div class="w-50">
+                    <p>First name</p>
+                    <input class="form-input" type="text">
+                </div>
+                <div class="w-50">
+                    <p>Last name</p>
+                    <input class="form-input" type="text">
+                </div>
+                <div style="clear: both"></div>
+                <div class="w-100">
+                    <p>Message</p>
+                    <textarea class="form-input" rows="10"></textarea>
+                </div>
+                <div class="w-100">
+                    <input id="Sub" type="checkbox">
+                    <label for="Sub">Subscribe</label>
+                    <button class="send-btn">SEND</button>
+                </div>
+            </form>
         </div>
-        <div class="main-background">
-            <h4 class="main-title">Buy Our Shoes!</h4>
-            <p class="main-content">
-                Trick or Treat! <br>
-                Special price for Halloween week!(~90% discount)<br>
-                If you want to see our products, please click the button
-            </p>
-            <button class="main-btn">Go to Shop</button>
-        </div>
-        <div class="info-background">
-            <h4>How we design our shoes</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt inventore distinctio ex quae quia quibusdam natus deleniti autem cumque optio ad iure saepe mollitia, quasi voluptatum aperiam ab. Quae, quidem?</p>
-        </div>
-        
-        <div class="form-background">
-            <div class="form-white">
-                <form>
-                    <div class="w-100">
-                        <h3>Contact Us</h3>
-                        <p>Your Email</p>
-                        <input class="form-input" type="email" placeholder="email@domain.com">
-                    </div>
-                    <div class="w-50">
-                        <p>First name</p>
-                        <input class="form-input" type="text">
-                    </div>
-                    <div class="w-50">
-                        <p>Last name</p>
-                        <input class="form-input" type="text">
-                    </div>
-                    <div style="clear: both"></div>
-                    <div class="w-100">
-                        <p>Message</p>
-                        <textarea class="form-input" rows="10"></textarea>
-                    </div>
-                    <div class="w-100">
-                        <input id="Sub" type="checkbox">
-                        <label for="Sub">Subscribe</label>
-                        <button class="send-btn">SEND</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </body>
+    </div>
+</body>
+
 </html>
