--- a/layout2.html
+++ b/layout2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link href="css/main.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body style="margin: 0px;">
@@ -16,7 +17,7 @@
     </div>
 
     <div class="main-background">
-        <h4 class="main-title">Buy Our Shoes!</h4>
+        <h4 class="main-title">Buy Our Shoes! Now On Sale</h4>
         <p class="main-content">
             Trick or Treat! <br>
             Special price for Halloween week!(~90% discount)<br>
@@ -28,6 +29,25 @@
         <h4>How we design our shoes</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt inventore distinctio ex quae quia quibusdam
             natus deleniti autem cumque optio ad iure saepe mollitia, quasi voluptatum aperiam ab. Quae, quidem?</p>
+    </div>
+
+    <div class="list-container">
+        <div class="list-box">
+            <h4 class="list-title">Fast Shipping</h4>
+            <p class="list-content">lorem ipsum</p>
+        </div>
+        <div class="list-box">
+            <h4 class="list-title">Good Service</h4>
+            <p class="list-content">lorem ipsum</p>
+        </div>
+        <div class="list-box">
+            <h4 class="list-title">Free Coupons</h4>
+            <p class="list-content">lorem ipsum</p>
+        </div>
+        <div class="list-box">
+            <h4 class="list-title">New Products</h4>
+            <p class="list-content">lorem ipsum</p>
+        </div>
     </div>
 
     <div class="form-background">
