font awesome exam

--- a/layout2.html
+++ b/layout2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link href="css/main.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -25,6 +26,7 @@
         </p>
         <button class="main-btn">Go to Shop</button>
     </div>
+    
     <div class="info-background">
         <h4>How we design our shoes</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt inventore distinctio ex quae quia quibusdam
@@ -33,20 +35,24 @@
 
     <div class="list-container">
         <div class="list-box">
+            <i class="fa-solid fa-cart-shopping fa-3x"></i>
             <h4 class="list-title">Fast Shipping</h4>
-            <p class="list-content">lorem ipsum</p>
+            <p class="list-content">We ship faster than other shops</p>
         </div>
         <div class="list-box">
+            <i class="fa-solid fa-earth-americas fa-3x"></i>
             <h4 class="list-title">Good Service</h4>
-            <p class="list-content">lorem ipsum</p>
+            <p class="list-content">Expect a lifelong service</p>
         </div>
         <div class="list-box">
+            <i class="fa-sharp fa-solid fa-ticket fa-3x"></i>
             <h4 class="list-title">Free Coupons</h4>
-            <p class="list-content">lorem ipsum</p>
+            <p class="list-content">With new welcome gifts</p>
         </div>
         <div class="list-box">
+            <i class="fa-sharp fa-solid fa-shirt fa-3x"></i>
             <h4 class="list-title">New Products</h4>
-            <p class="list-content">lorem ipsum</p>
+            <p class="list-content">See monthly new products</p>
         </div>
     </div>
 
