one-way animation exam

--- a/layout2.html
+++ b/layout2.html
@@ -26,7 +26,7 @@
         </p>
         <button class="main-btn">Go to Shop</button>
     </div>
-    
+
     <div class="info-background">
         <h4>How we design our shoes</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt inventore distinctio ex quae quia quibusdam
@@ -53,6 +53,35 @@
             <i class="fa-sharp fa-solid fa-shirt fa-3x"></i>
             <h4 class="list-title">New Products</h4>
             <p class="list-content">See monthly new products</p>
+        </div>
+    </div>
+
+    <div class="product-bg">
+        <div class="product-container">
+            <div class="product-box">
+                <div style="position: relative">
+                    <div class="overlay">
+                        <span>$60</span>
+                    </div>
+                    <img src="img/product1.jpg">
+                </div>
+            </div>
+            <div class="product-box">
+                <div style="position: relative">
+                    <div class="overlay">
+                        <span>$80</span>
+                    </div>
+                    <img src="img/product2.jpg">
+                </div>
+            </div>
+            <div class="product-box">
+                <div style="position: relative">
+                    <div class="overlay">
+                        <span>$40</span>
+                    </div>
+                    <img src="img/product3.jpg">
+                </div>
+            </div>
         </div>
     </div>
 
