--- a/bootstrap_exam.html
+++ b/bootstrap_exam.html
@@ -36,25 +36,99 @@
         </div>
     </nav>
 
-    <div class="card shadow border border-0" style="width: 18rem;">
-        <img href="https://placeholder.com" src="https://via.placeholder.com/600x350" class="card-img-top w30 h20">
-        <div class="card-body">
-            <span class="badge rounded-pill text-bg-primary">News</span>
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text pb-3">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            <div class="d-flex align-items-center pb-3">
-                <div class="flex-shrink-0">
-                    <img class="rounded-circle" href="https://placeholder.com" src="https://via.placeholder.com/40" alt="...">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-xl-3 p-1 ">
+                <div class="card shadow border border-0 m-auto" style="width: 18rem;">
+                    <img href="https://placeholder.com" src="https://via.placeholder.com/600x350"
+                        class="card-img-top w30 h20">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text pb-3">Some quick example text to build on the card title and make up the
+                            bulk of the card's
+                            content.</p>
+                    </div>
                 </div>
-                
-                <div class="flex-grow-1 ms-3 fs-6 lh-sm">
-                    <h6 class="fw-bold mb-0">Kelly</h6>
-                    <p class="mb-0">This is some content from a media component.</p>
+            </div>
+            <div class="col-md-6 col-xl-3 p-1">
+                <div class="card shadow border border-0 m-auto" style="width: 18rem;">
+                    <img href="https://placeholder.com" src="https://via.placeholder.com/600x350"
+                        class="card-img-top w30 h20">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text pb-3">Some quick example text to build on the card title and make up the
+                            bulk of the card's
+                            content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-3 p-1">
+                <div class="card shadow border border-0 m-auto" style="width: 18rem;">
+                    <img href="https://placeholder.com" src="https://via.placeholder.com/600x350"
+                        class="card-img-top w30 h20">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text pb-3">Some quick example text to build on the card title and make up the
+                            bulk of the card's
+                            content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-3 p-1">
+                <div class="card shadow border border-0 m-auto" style="width: 18rem;">
+                    <img href="https://placeholder.com" src="https://via.placeholder.com/600x350"
+                        class="card-img-top w30 h20">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text pb-3">Some quick example text to build on the card title and make up the
+                            bulk of the card's
+                            content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="p-3"></div>
+        <div class="container">
+            <div class="row p-1 align-items-center">
+                <div class="col-0 col-md-5 order-md-3">
+                    <p></p>
+                </div>
+                <div class="col-2 col-md-2 order-md-2">
+                    <img href="https://placeholder.com" src="https://via.placeholder.com/60" width="100%">
+                </div>
+                <div class="col-10 col-md-5 order-md-1 text-md-end">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, officiis deleniti. Atque
+                        veritatis repellat voluptas mollitia autem, voluptate aliquam.</p>
+                </div>
+            </div>
+            <div class="row p-1 align-items-center">
+                <div class="col-0 col-md-5">
+                    <p></p>
+                </div>
+                <div class="col-2 col-md-2">
+                    <img href="https://placeholder.com" src="https://via.placeholder.com/60" width="100%">
+                </div>
+                <div class="col-10 col-md-5">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, officiis deleniti. Atque
+                        veritatis repellat voluptas mollitia autem, voluptate aliquam.</p>
+                </div>
+            </div>
+            <div class="row p-1 align-items-center">
+                <div class="col-0 col-md-5 order-md-3">
+                    <p></p>
+                </div>
+                <div class="col-2 col-md-2 order-md-2">
+                    <img href="https://placeholder.com" src="https://via.placeholder.com/60" width="100%">
+                </div>
+                <div class="col-10 col-md-5 order-md-1 text-md-end">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, officiis deleniti. Atque
+                        veritatis repellat voluptas mollitia autem, voluptate aliquam.</p>
                 </div>
             </div>
         </div>
     </div>
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
