--- a/layout2.html
+++ b/layout2.html
@@ -56,6 +56,8 @@
         </div>
     </div>
 
+    <input type="file">
+
     <div class="product-bg">
         <div class="product-container">
             <div class="product-box">
